# Smart-Rental-Tracking

./: .gitignore  README.md
analysis/: analytics_module.py  debug_api.py  main.py  pyproject.toml  test_asset_dashboard.py  test_run_all.py
dataset_preparation/: add_alerts.py  check_alerts.py  check_schema.py  cretate_dataset.py  equipment_management.db  insert_data.py  main.py  pyproject.toml  verify_data.py
frontend/asset-dashboard/: package-lock.json  package.json
frontend/asset-dashboard/src/: App.css  App.js  index.css
qr_scanner/: main.py  pyproject.toml
telemetry_simulator/: main.py  pyproject.toml
voice_agent/: .env  chat.py  pyproject.toml  server.py
