[project]
name = "qr-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "pyzbar>=0.1.9",
    "qreader>=3.16",
    "uvicorn>=0.35.0",
]
